@@ -550,17 +550,18 @@ detects.  With the Players parameter, it will even attack players as well.
 BEHAVIOR_FOLLOWER=\
 Behavior   : Follower\n\r\
 Targets    : MOBs, Items\n\r\
-Parameters : min, max ticks, pct chance (inv) (group) (follow mask)\n\r\
+Parameters : min, max, pct (inv) (group) (nofollowers) (follow mask)\n\r\
 Example    : \n\r\
 Example    : min=1 max=1 chance=50 -race +elf\n\r\
-Example    : group -race +elf +gnome\n\r\
+Example    : group nofollowers -race +elf +gnome\n\r\
 Example    : min=4 max=20 chance=100 inv -race +elf +gnome\n\r\
 Description: \n\r\
 The mob with this behavior will follow any other mob that leaves the room.  A chance \
 percentage (1-100) parameter may be given to better randomize the opportunity.  A \
 group flag may also be included to make the mob join the targets group instead of \
 merely following them out of the room.  The rate of non-grouping following is \
-dictated by the min and max ticks.\n\r\
+dictated by the min and max ticks.  The nofollowers flag will make sure that \
+this behavior does not trigger when the mob has someone following him/her.\n\r\
 \n\r\
 An item with this behavior will also follow mobs around, depending upon \
 whether the inventory flag is in the parameters or not.  If it is, then \
